# Multporn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
Multporn/: __init__.py  comic.py  multporn.py
docs/source/: conf.py  examples.rst  index.rst  install.rst  installation.rst  multporn.rst
docs/source/multporn/: Enumerators.rst  classes.rst  multporn.rst  request handler.rst  utils.rst  webpage.rst
multporn/: __init__.py  multporn.py
multporna/: __init__.py
tests/: Between Friends.json  multporn_test.py  test_multporn.py  test_requesthandler.py
