[metadata]
name = multporn
version = 1.3.6
author = pyporn-san
author_email = pypornsan@gmail.com
description = python library used to interact with multporn.net via python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyporn-san/Multporn
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
install_requires =
    pathvalidate>=2.5.0
    urllib3>=1.26.7
    requests>=2.25.1
    beautifulsoup4>=4.10.0
    Faker>=5.0.0
    tqdm>=4.61.1
python_requires = >=3.8
