[metadata]
name = multporn
version = 1.4.0
description = python library used to interact with multporn.net via python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyporn-san/Multporn
author = pyporn-san
author_email = pypornsan@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
install_requires =
    Faker>=16.6.1
    beautifulsoup4>=4.10.0
    pathvalidate>=2.5.0
    requests>=2.28.2
    tqdm>=4.61.1
    urllib3>=1.26.7
python_requires = >=3.8
